--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.5.3",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
