--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT="3001"
-MONGO_URI="mongodb+srv://wenqi:Password@cluster0.jvfl3.mongodb.net/userCredentials"
+MONGO_URI=mongodb+srv://wenqi:Password@cluster0.jvfl3.mongodb.net/pawsweb_db?retryWrites=true&w=majority
 FRONTEND_URL="http://localhost:5173"
 SESSION_SECRET="123abc"
 EMAIL_USER=pawsweb.2024@gmail.com
