--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "react-router-dom": "^6.26.1"
   }
 }
