--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "gridfs": "^1.0.0",
     "mongoose": "^8.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
