--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "pawsweb-wq",
+  "name": "pawsweb",
   "version": "1.0.0",
+  "description": "Terminal >> npm install >> npm run dev",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "build-db-win": "sqlite3 ./database/database.db < ./database/db_schema.sql",
-    "server": "nodemon index.js",
-    "client": "npm start --prefix views",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mysql2": "^3.11.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
+    "express-session": "^1.18.0",
+    "nodemon": "^3.1.4",
     "sqlite3": "^5.1.7"
   },
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.4"
-  }
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
