--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://wenqi:Password@cluster0.jvfl3.mongodb.net/pawsweb_db?ret
 FRONTEND_URL="http://localhost:5173"
 SESSION_SECRET="123abc"
 EMAIL_USER=pawsweb.2024@gmail.com
-EMAIL_PASS=vxeh lruv umhf izdo
+EMAIL_PASS=whtn pncq ghie umwf
